# active_torchference

./: .gitignore  FINAL_FIXES_AND_IMPROVEMENTS.md  Makefile  README.md  check_installation.py  pyproject.toml  pytest.ini  requirements.txt  run_all_examples.py  setup.py
active_torchference/: README.md  __init__.py  agent.py  beliefs.py  config.py  environment.py  free_energy.py  output_manager.py  policy.py  utils.py
active_torchference/orchestrators/: README.md  __init__.py  animator.py  logger.py  runner.py  visualizer.py
docs/: AGENTS.md  API.md  ARCHITECTURE.md  BELIEF_AND_POLICY_UPDATES.md  METHOD_REFERENCE.md  OUTPUT_STRUCTURE.md  QUICKSTART.md  README.md
examples/: README.md  complete_analysis_demo.py  comprehensive_fixes_demo.py  custom_environment.py  epistemic_pragmatic_balance.py  gridworld_exploration.py  simple_navigation.py  unified_output_example.py
tests/: README.md  __init__.py  test_agent.py  test_belief_updates.py  test_beliefs.py  test_config.py  test_efe_per_policy.py  test_environment.py  test_free_energy.py  test_integration.py  test_oscillator_environment.py  test_output_manager.py  test_policy.py  test_utils.py
validation/: README.md  validate_efe_computation.py  validate_vfe_computation.py
validation/outputs/: examples_run_20251003_085346.json  examples_run_20251003_085346.txt  examples_run_20251003_085754.json  examples_run_20251003_085754.txt  examples_run_20251003_085846.json  examples_run_20251003_085846.txt  examples_run_20251003_090211.json  examples_run_20251003_090211.txt  examples_run_20251003_092238.json  examples_run_20251003_092238.txt  examples_run_20251003_092505.json  examples_run_20251003_092505.txt  examples_run_20251003_094119.json  examples_run_20251003_094119.txt  examples_run_20251003_094551.json  examples_run_20251003_094551.txt  examples_run_20251003_095257.json  examples_run_20251003_095257.txt  examples_run_20251003_115005.json  examples_run_20251003_115005.txt  (+16 more)
(+22 files in other folders)
